<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_widget_name">NavBro WebView</string>
    <string name="app_widget_title">Widget configuration</string>
    <string name="app_widget_add_button">Create the widget</string>
	<string name="app_widget_cancel_button">Cancel</string>
	<string name="app_widget_url_title">Title widget:</string>
	<string name="app_widget_message_add_missing_url">Select an URL before to create the widget.</string>
	
    <string name="app_name">NavBro WebView</string>
    <string name="github_url">https://github.com/joakim-ribier/NavBro-WebView</string>
    
    <string name="top_menu_left_menu">Display the left menu</string>
    <string name="top_menu_reload">Reload</string>
    
    <string name="left_menu_add">Add an url</string>
    <string name="left_menu_list">Display the url list</string>
    <string name="left_menu_github">`Fork me` on GitHub</string>
    <string name="left_menu_settings">`WebView` settings</string>
    <string name="left_menu_sources">`WebView` code source</string>
    <string name="left_menu_settings_java_script_enabled">`Java Script Enabled`</string>
    <string name="left_menu_settings_zoom_controls">`Build In Zoom Controls`</string>
    <string name="left_menu_settings_use_wide_view_port">`Use Wide View Port`</string>
    
    <string name="my_dialog_title">_TITLE</string>
    <string name="my_dialog_negative_button">Cancel</string>
    <string name="my_dialog_positive_button">OK</string>
    
    <string name="save_new_url_title_dialog">Save a new url</string>
    <string name="save_new_url_text_dialog">http:// and https:// &#8230;</string>
    
    <string name="list_url_title_dialog">Url list</string>
    <string name="list_url_title_dialog_delete">Delete</string>
    
    <string name="web_source_loading">Please wait for loading&#8230;</string>
    <string name="web_source_oops">Oops &#8230;</string>

</resources>