<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:baselineAligned="false"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/gray"
            android:baselineAligned="false"
            android:gravity="center"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/gray"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/leftMenuViewAddUrlButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/button_selector_rounded_corners"
                    android:clickable="true"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="10dp" >

                    <ImageView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:contentDescription="@string/left_menu_add"
                        android:src="@drawable/add" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/left_menu_add"
                        android:textColor="@color/white"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/gray"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/leftMenuViewListUrlButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/button_selector_rounded_corners"
                    android:clickable="true"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="10dp" >

                    <ImageView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:contentDescription="@string/left_menu_list"
                        android:src="@drawable/list" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/left_menu_list"
                        android:textColor="@color/white"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/gray"
            android:baselineAligned="false"
            android:gravity="center"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/gray"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/leftMenuViewGitHubButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/button_selector_rounded_corners"
                    android:clickable="true"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="10dp" >

                    <ImageView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:contentDescription="@string/left_menu_github"
                        android:src="@drawable/github" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/left_menu_github"
                        android:textColor="@color/white"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@color/blue"
            android:baselineAligned="false"
            android:orientation="vertical" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:baselineAligned="false"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:contentDescription="@string/left_menu_settings"
                android:src="@drawable/settings" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/left_menu_settings"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/gray"
            android:baselineAligned="false"
            android:orientation="vertical" >

            <CheckBox
                android:id="@+id/LeftMenuWebViewSettingsZoomControls"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/left_menu_settings_zoom_controls"
                android:textSize="14sp" />

            <CheckBox
                android:id="@+id/LeftMenuWebViewSettingsJavaScriptEnabled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/left_menu_settings_java_script_enabled"
                android:textSize="14sp" />

            <CheckBox
                android:id="@+id/LeftMenuWebViewSettingsUseWideViewPort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/left_menu_settings_use_wide_view_port"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@color/blue"
            android:baselineAligned="false"
            android:orientation="vertical" >
        </LinearLayout>

        <LinearLayout
            android:id="@+id/leftMenuDisplayWebSourceButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_selector_black_to_blue"
            android:baselineAligned="false"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:contentDescription="@string/left_menu_sources"
                android:src="@drawable/source" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/left_menu_sources"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@color/blue"
            android:baselineAligned="false"
            android:orientation="vertical" >
        </LinearLayout>
    </LinearLayout>

</ScrollView>