<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:padding="10dp" >

        <ImageView
            android:id="@+id/myDialogTitleImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/my_dialog_title"
            android:src="@android:drawable/ic_dialog_info"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/myDialogTitleTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/myDialogTitleImageView"
            android:text="@string/my_dialog_title"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/blue" />

    <ScrollView
        android:id="@+id/myDialogMainView"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:padding="5dp"
        android:scrollbarAlwaysDrawVerticalTrack="true" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:padding="1dp" />

    <LinearLayout
        android:id="@+id/myDialogButtonLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:orientation="horizontal"
        android:padding="0dp" >

        <Button
            android:id="@+id/myDialogNegativeButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_selector_gray_to_blue"
            android:padding="10dp"
            android:text="@string/my_dialog_negative_button"
            android:textSize="16sp" />

        <RelativeLayout
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/blue"
            android:padding="1dp" />

        <Button
            android:id="@+id/myDialogPositiveButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_selector_gray_to_blue"
            android:padding="10dp"
            android:text="@string/my_dialog_positive_button"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>