<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="@color/gray"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_widget_title"
            android:src="@android:drawable/ic_dialog_info"
            android:textSize="16sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/app_widget_title"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/blue" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:padding="5dp"
        android:scrollbarAlwaysDrawVerticalTrack="true" >

        <LinearLayout
            android:id="@+id/mainConfigurationWidgetContentLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/app_widget_url_title"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/mainConfigurationWidgetTitleTextView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:inputType="textUri"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <RadioGroup
                android:id="@+id/mainConfigurationWidgetURLsRadioGroup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:padding="1dp" />

    <LinearLayout
        android:id="@+id/myDialogButtonLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/mainConfigurationWidgetCancelButton"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_selector_rounded_corners"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:contentDescription="@string/app_widget_cancel_button"
                android:src="@drawable/cancel" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/app_widget_cancel_button"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/blue"
            android:padding="1dp" />

        <LinearLayout
            android:id="@+id/mainConfigurationWidgetAddButton"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_selector_rounded_corners"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:contentDescription="@string/app_widget_add_button"
                android:src="@drawable/add" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/app_widget_add_button"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>